# proofsignal-spec

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: golden-path-troubleshooting.md  golden-path.md  installation.md  managed-runtime-entitlement-handoff.md  release-readiness.md
scripts/ci/: install_real_artifact.py
specs/009-golden-path-productization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-golden-path-onboarding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-auto-loop/: plan.md  spec.md  tasks.md
src/proofsignal_spec/: __init__.py  cli.py
src/verifysignal_spec/: __init__.py  cli.py
tests/: __init__.py  conftest.py  helpers.py
tests/contract/: test_agent_chat_stage_card_contract.py  test_agent_command_contract.py  test_agent_command_guardrail_contract.py  test_agent_command_prerequisite_contract.py  test_agent_guidance_contract.py  test_authoring_coherence_contract.py  test_backend_entitlement_api_contract.py  test_capability_compatibility_contract.py  test_cli_author_validate_contract.py  test_cli_init_check_contract.py  test_cli_integration_contract.py  test_cli_list_contract.py  test_cli_repair_contract.py  test_cli_run_contract.py  test_confirmation_runtime_support_contract.py  test_core_entitlement_error_map_tracks_core.py  test_core_executable_contract.py  test_core_public_boundary_contract.py  test_core_public_compatibility_contract.py  test_core_public_contract.py  test_core_receipt_invocation_contract.py  (+50 more)
(+398 files in other folders)
