[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofsignal-spec"
version = "0.13.0"
description = "Project-local CLI and coding-agent interface for ProofSignal use cases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProofSignal Spec maintainers" }]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "PyYAML>=6",
  "pydantic>=2",
  "pathspec>=0.12",
  "packaging>=23"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
proofsignal = "proofsignal_spec.cli:main"
proofsignal-spec = "proofsignal_spec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proofsignal_spec = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-q"
