[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verifysignal-spec"
version = "0.19.0"
description = "Project-local CLI and coding-agent interface for VerifySignal use cases."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Thiago Valentim" }]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "PyYAML>=6",
  "pydantic>=2",
  "pathspec>=0.12",
  "packaging>=23",
  "cryptography>=42"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
verifysignal = "verifysignal_spec.cli:main"
verifysignal-spec = "verifysignal_spec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verifysignal_spec = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-q"
